welcome.lessons.welcome.bat.bool2.AnswerCell.scala.error
answerCell:6: error: reassignment to val
  else if(isMorning=true)
                   ^